# ALVR

./: Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: rust.yml
alvr/client_core/: Cargo.toml
alvr/client_core/src/: c_api.rs  connection.rs  graphics.rs  lib.rs
alvr/client_openxr/src/: lib.rs
alvr/graphics/: Cargo.toml
alvr/graphics/src/: client_stream_pass.rs  client_stream_renderer.rs  convert.rs  lib.rs  lobby.rs  srgb_pass.rs
alvr/server/src/: lib.rs
alvr/web_gateway/: Cargo.toml
alvr/web_gateway/src/: main.rs
web_client/: index.html  package.json  tsconfig.json
web_client/src/: bit_reader.ts  index.ts  shader.ts
web_client/src/parser/: hevc.ts
